# twr-skeleton-cmake

./: .gitignore  CMakeLists.txt  cmake.txt
.github/workflows/: main.yml
sdk/: CMakeLists.txt
sdk/toolchain/: toolchain.cmake  utils.cmake
src/: CMakeLists.txt  application.c  application.h
